--- a/DinerMax3000BusinessLayer/DinerMax3000BusinessLayer.csproj
+++ b/DinerMax3000BusinessLayer/DinerMax3000BusinessLayer.csproj
@@ -20,4 +20,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
+  </ItemGroup>
+
 </Project>
