trying to fix errors

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 DinerMax3000BusinessLayer/DSDinerMax3000.Designer.cs
+DinerMax3000BusinessLayer/DSDinerMax3000.Designer.cs
