--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,4 @@ ASALocalRun/
 healthchecksdb
 DinerMax3000BusinessLayer/DSDinerMax3000.Designer.cs
 DinerMax3000BusinessLayer/DSDinerMax3000.Designer.cs
+DinerMax3000BusinessLayer/DSDinerMax3000.Designer.cs
